--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Find music intervals with node",
   "main": "index.js",
   "scripts": {
-    "test": "npm run"
+    "start": "tsc && node dist/index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/MichaelDarr/Gooey-Intervals/issues"
   },
-  "homepage": "https://github.com/MichaelDarr/Gooey-Intervals#readme"
+  "homepage": "https://github.com/MichaelDarr/Gooey-Intervals#readme",
+  "dependencies": {
+    "@types/node": "^10.12.18",
+    "typescript": "^3.2.4"
+  }
 }
